update footer links

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <ul id="link-types">
                     <li><a href="#abs">absolute</a></li> <!-- link this to the absolute links section -->
                     <li><a href="#rel">relative</a></li> <!-- link this to the relative links section -->
-                    <li><a href="#frag">fragment</a></a></li> <!-- link this to the fragment links section -->
+                    <li><a href="#frag">fragment</a></li> <!-- link this to the fragment links section -->
                     <li><a href="#email">email</a></li> <!-- link this to the email links section -->
                     <li><a href="#tel">telephone</a></li> <!-- link this to the telephone links section -->
                     <li><a href="#rel-frag">relative with fragment</a></li> <!-- link this to the relative with fragment links section -->
